fixe ul and icon elementor

--- a/assets/css/_parameters.scss
+++ b/assets/css/_parameters.scss
@@ -36,7 +36,7 @@ $fontOne :'muli', sans-serif;
 $fontTwo :'muli', sans-serif;
 // $fontTwo :'Lora', serif;
 
-a,p,*
+a,p,div
 {
     font-family: $fontOne !important;
 }
