fix ul ol elementor builder

--- a/assets/css/_fix.scss
+++ b/assets/css/_fix.scss
@@ -20,7 +20,7 @@ strong, b
     margin-bottom: 1em!important;
     margin-left: 0 !important;
     margin-right: 0 !important;
-    padding-left: 40px !important;
+    padding-left: 40px;
 }
 
 .elementor-widget-text-editor .elementor-text-editor ol, .wp-editor-area ol
