--- a/assets/css/_single-blog.scss
+++ b/assets/css/_single-blog.scss
@@ -16,7 +16,7 @@ h3.question
 }
 ul.answer, ol.answer
 {
-    padding-left: 4em;
+    padding-left: 4em !important;
 }
 .author
 {
@@ -44,7 +44,7 @@ ul.answer, ol.answer
     }
     ul.answer, ol.answer
     {
-        padding-left: 4em;
+        padding-left: 4em !important;
     }
     .author
     {
