--- a/assets/css/_parameters.scss
+++ b/assets/css/_parameters.scss
@@ -107,7 +107,7 @@ h2
 
 /*-----------------button-----------------*/
 
-.Bttn
+.Bttn, #grBttnElem
 {
     text-decoration: none !important;
     background-color: $green!important;
