fix category in css

--- a/assets/css/_archive-post.scss
+++ b/assets/css/_archive-post.scss
@@ -58,6 +58,7 @@
                 text-decoration: none;
                 color: $TomcoGray;
                 font-size: 0.8rem;
+                pointer-events: none !important;
             }
             .fa-circle
             {
