--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -32,12 +32,20 @@ Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
 /*-----------------Politique Confidentialité---------*/
 .tableConf 
 {
-    max-width: 900px;
+    max-width: 1000px;
     width: 95vw;
     border-collapse: collapse;
+    margin: auto;
     th, td {
     border: 1px solid black;
   }
+}
+.listConf
+{
+    width: 1000px;
+    max-width: 85vw;
+    margin: auto;
+    text-align: justify;
 }
 
 /*-----------------home Page-----------------*/
