--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -46,6 +46,13 @@ Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
     max-width: 85vw;
     margin: auto;
     text-align: justify;
+    list-style: inside;
+}
+
+.site-info a
+{
+    text-decoration: none;
+    color: $myDarkGray;
 }
 
 /*-----------------home Page-----------------*/
