add flag in menu

--- a/assets/css/_header.scss
+++ b/assets/css/_header.scss
@@ -198,8 +198,8 @@ display: none;
                 text-decoration: none;
                 display: flex;
                 justify-content: center;
+                align-items: center;
             }
-
         }
 
     }
