--- a/assets/css/_header.scss
+++ b/assets/css/_header.scss
@@ -198,7 +198,7 @@ display: none;
                 text-decoration: none;
                 display: flex;
                 justify-content: center;
-                align-items: center;
+                align-items: center !important; 
             }
         }
 
