new way for trabslate with translatepress

--- a/assets/css/_header.scss
+++ b/assets/css/_header.scss
@@ -1,3 +1,17 @@
+
+/*--------------------------------------------------------------
+## translate
+--------------------------------------------------------------*/
+
+.trp-language-switcher > div 
+{
+
+    border :none;
+}
+
+
+
+
 /*--------------------------------------------------------------
 ## Menus / header
 --------------------------------------------------------------*/
